refactor(coordenador): Ajusta lógica de criação e remoção de cargo